--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,4 +9,4 @@ authors = ["Charlie Karafotias <cnkara2023@gmail.com>"]
 [dependencies]
 clap = { version = "4.4.7", features = ["derive"] }
 dotenv = "0.15.0"
-sqlite = "0.32.0"
+rusqlite = "0.30.0"
