--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,7 @@ authors = ["Charlie Karafotias <cnkara2023@gmail.com>"]
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+chrono = "0.4.31"
 clap = { version = "4.4.7", features = ["derive"] }
 dotenv = "0.15.0"
-rusqlite = "0.30.0"
+rusqlite = { version = "0.30.0", features = ["chrono"] }
