--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,7 @@ authors = ["Charlie Karafotias <cnkara2023@gmail.com>"]
 [dependencies]
 chrono = "0.4.38"
 clap = { version = "4.5.4", features = ["derive"] }
+comfy-table = "7.1.1"
 dotenv = "0.15.0"
 rusqlite = { version = "0.31.0", features = ["chrono"] }
 tempdir = "0.3.7"
