--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "tmgr"
-version = "0.3.0"
+version = "0.3.1"
 edition = "2021"
 authors = ["Charlie Karafotias <cnkara2023@gmail.com>"]
 repository = "https://github.com/charliekarafotias/tmgr"
@@ -12,6 +12,10 @@ chrono = "0.4.38"
 clap = { version = "4.5.6", features = ["derive"] }
 comfy-table = "7.1.1"
 dotenv = "0.15.0"
+reqwest = { version = "0.12.4", features = ["json"] }
 rusqlite = { version = "0.31.0", features = ["chrono"] }
+serde = { version = "1.0.203", features = ["derive"] }
+serde_json = "1.0.117"
 tempdir = "0.3.7"
 tempfile = "3.10.1"
+tokio = { version = "1.38.0", features = ["full"] }
