--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,6 +14,7 @@ comfy-table = "7.1.1"
 dotenv = "0.15.0"
 reqwest = { version = "0.12.4", features = ["json"] }
 rusqlite = { version = "0.31.0", features = ["chrono"] }
+semver = "1.0.23"
 serde = { version = "1.0.203", features = ["derive"] }
 serde_json = "1.0.117"
 tempdir = "0.3.7"
