--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,7 @@ repository = "https://github.com/charliekarafotias/tmgr"
 chrono = "0.4.38"
 clap = { version = "4.5.6", features = ["derive"] }
 comfy-table = "7.1.1"
+directories = "5.0.1"
 dotenv = "0.15.0"
 reqwest = { version = "0.12.4", features = ["json"] }
 rusqlite = { version = "0.31.0", features = ["chrono"] }
