--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,6 +15,7 @@ directories = "5.0.1"
 dotenv = "0.15.0"
 reqwest = { version = "0.12.4", features = ["json"] }
 rusqlite = { version = "0.31.0", features = ["chrono"] }
+rust_search = "2.1.0"
 semver = "1.0.23"
 serde = { version = "1.0.203", features = ["derive"] }
 serde_json = "1.0.117"
