--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "tmgr"
-version = "0.4.2"
+version = "0.4.3"
 edition = "2021"
 authors = ["Charlie Karafotias <cnkara2023@gmail.com>"]
 repository = "https://github.com/charliekarafotias/tmgr"
@@ -22,3 +22,7 @@ serde_json = "1.0.117"
 tempdir = "0.3.7"
 tempfile = "3.10.1"
 tokio = { version = "1.38.0", features = ["full"] }
+
+[dev-dependencies]
+assert_cmd = "2.0.14"
+predicates = "3.1.0"
