--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,6 +20,7 @@ rust_search = "2.1.0"
 semver = "1.0.23"
 serde = { version = "1.0.204", features = ["derive"] }
 serde_json = "1.0.120"
+surrealdb = { version = "1.5.4", features = ["kv-mem", "kv-rocksdb"] }
 tempdir = "0.3.7"
 tempfile = "3.10.1"
 tokio = { version = "1.38.0", features = ["full"] }
