--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "tmgr"
-version = "0.4.3"
+version = "1.0.0"
 edition = "2021"
 authors = ["Charlie Karafotias <cnkara2023@gmail.com>"]
 repository = "https://github.com/charliekarafotias/tmgr"
@@ -8,23 +8,7 @@ repository = "https://github.com/charliekarafotias/tmgr"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-chrono = "0.4.38"
-clap = { version = "4.5.8", features = ["derive"] }
-colored = "2.1.0"
-comfy-table = "7.1.1"
-directories = "5.0.1"
-dotenv = "0.15.0"
-reqwest = { version = "0.12.5", features = ["json"] }
-rusqlite = { version = "0.31.0", features = ["chrono"] }
-rust_search = "2.1.0"
-semver = "1.0.23"
-serde = { version = "1.0.204", features = ["derive"] }
-serde_json = "1.0.120"
+clap = { version = "4.5.16", features = ["derive"] }
+serde = { version = "1.0.208", features = ["derive"] }
 surrealdb = { version = "1.5.4", features = ["kv-mem", "kv-rocksdb"] }
-tempdir = "0.3.7"
-tempfile = "3.10.1"
-tokio = { version = "1.38.0", features = ["full"] }
-
-[dev-dependencies]
-assert_cmd = "2.0.14"
-predicates = "3.1.0"
+tokio = { version = "1.39.3", features = ["macros", "rt-multi-thread"] }
