--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,3 +12,4 @@ clap = { version = "4.5.17", features = ["derive"] }
 serde = { version = "1.0.210", features = ["derive"] }
 surrealdb = { version = "1.5.4", features = ["kv-mem", "kv-rocksdb"] }
 tokio = { version = "1.40.0", features = ["macros", "rt-multi-thread"] }
+serde_json = "1.0.125"
