--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,3 +16,6 @@ serde_json = "1.0.128"
 reqwest = { version = "0.12.7", features = ["json"] }
 semver = "1.0.23"
 directories = "5.0.1"
+
+[dev-dependencies]
+tempfile = "3.12.0"
