--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,7 +10,7 @@ repository = "https://github.com/charliekarafotias/tmgr"
 [dependencies]
 clap = { version = "4.5.17", features = ["derive"] }
 serde = { version = "1.0.210", features = ["derive"] }
-surrealdb = { version = "1.5.4", features = ["kv-mem", "kv-rocksdb"] }
+surrealdb = { version = "2.0.1", features = ["kv-mem", "kv-surrealkv"] }
 tokio = { version = "1.40.0", features = ["macros", "rt-multi-thread"] }
 serde_json = "1.0.128"
 reqwest = { version = "0.12.7", features = ["json"] }
