--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "tmgr"
-version = "2.1.0"
+version = "2.1.1"
 edition = "2021"
 authors = ["Charlie Karafotias <cnkara2023@gmail.com>"]
 repository = "https://github.com/charliekarafotias/tmgr"
@@ -17,6 +17,9 @@ reqwest = { version = "0.12.7", features = ["json"] }
 semver = "1.0.23"
 directories = "5.0.1"
 colored = "2.1.0"
+comfy-table = "7.1.1"
+
 
 [dev-dependencies]
+chrono = "0.4.38"
 tempfile = "3.12.0"
