--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -27,7 +27,7 @@ repos:
     -   id: github-release
         name: github-release
         stages: [post-merge]
-        entry: gh release create "v$(cargo run -- -V | cut -d ' ' -f 2)" ./target/release/tmgr --latest --generate-notes
+        entry: version=$(./target/release/tmgr -V | cut -d ' ' -f 2) && gh release create v$version ./target/release/tmgr --latest --generate-notes
         language: system
         pass_filenames: false
         verbose: true
